--- a/src/components/Background/StarryBackground.css
+++ b/src/components/Background/StarryBackground.css
@@ -2,32 +2,25 @@ body {
     margin: 0;
     overflow: hidden;
   }
-  
   .starry-background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: -1;
-    background: black;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding-left: 5%;
-    
-  }
-  
-  .star {
+    background: radial-gradient(circle at center, #000011, #00000f); /* Космически фон */
+    z-index: -1;
+}
+
+.star {
     position: absolute;
-    background-color: rgb(249, 247, 222);
-    
+    background-color: white;
     border-radius: 50%;
+    opacity: 0.8;
     animation: twinkle 3s infinite alternate;
-  }
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.8); /* Сияние около звездите */
+}
   
   @keyframes twinkle {
     0% {
