--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@ body {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background: linear-gradient(135deg, #1b1d29, #272a40); /* Фон като дълбок космос */
+    background: linear-gradient(135deg, #1b1d29, #272a40); 
     color: #ffffff;
     border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.5); /* Неоново сияние */
-    font-family: 'Orbitron', sans-serif; /* Футуристичен шрифт */
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.5); 
+    font-family: 'Orbitron', sans-serif; 
   }
   
   .auth-form h2 {
@@ -81,3 +81,61 @@ body {
     text-shadow: 0 0 10px rgba(0, 255, 171, 0.8);
   }
   
+  .error-message {
+    color: #ff4f4f; /* Червено за грешките */
+    font-size: 0.9rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  
+
+
+  .create-form,
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-width: 400px;
+  margin: auto;
+}
+
+.create-form label,
+.edit-form label {
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+}
+
+textarea,
+input {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #3182ce;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #2b6cb0;
+}
+
+.delete-button {
+  padding: 10px 20px;
+  background-color: #e53e3e;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  background-color: #c53030;
+}
