--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -6,7 +6,8 @@
     text-align: center;
     box-shadow: 0 -5px 15px rgba(0, 255, 255, 0.5);
     bottom: 0;
-    position: relative; 
+    position: relative;
+    z-index: 1;
   }
   
   .footer-section {
