--- a/src/Styles/planets.css
+++ b/src/Styles/planets.css
@@ -4,7 +4,9 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Audiowide', sans-serif;
+  font-style: normal;
+  font-weight: 400;
   color: #ffffff;
   background-image: url('/public/images/planets-bgrd.jpg'); 
   background-size: cover; 
@@ -14,7 +16,7 @@
 
 
 .planets-title {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   color: #00ffff;
   margin-bottom: 40px;
   text-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
@@ -25,13 +27,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center; 
-  gap: 40px; 
+  gap: 40px;
   margin-bottom: 10em;
 }
 
 
 .planet-card {
-  width: 300px;
   background: rgba(20, 20, 30, 0.8);
   border: 1px solid #00ffff;
   border-radius: 10px;
@@ -49,12 +50,14 @@
 
 
 .planet-name {
+
   font-size: 1.5rem;
   color: #00ffff;
   margin-bottom: 10px;
 }
 
 .planet-image {
+ 
   width: 100%;
   height: 50%;
   border-radius: 10px;
@@ -62,64 +65,28 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-
-.planet-description {
-  font-size: 1rem;
-  color: #b0f7f7;
-  margin-bottom: 20px;
-}
-
-
-.planet-size {
-  font-size: 1.2rem;
-  color: #b0f7f7;
-}
-
-
-.planet-color {
-  font-size: 1.2rem;
-  color: #b0f7f7;
-}
-
-
-.planet-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  border: 1px solid #00ffff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-
-.planet-size, .planet-color {
-  font-size: 1rem;
-  color: #b0f7f7;
-}
-
-
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.8);
+  background:  rgba(60, 84, 113, 0.6);
   color: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
   width: 500px;
   text-align: center;
   z-index: 1000;
 }
-
+.close-button{
+  position: relative;
+  left: 10em;
+}
 button {
   margin: 20px;
   padding: 10px 20px;
-  background: #00ffcc;
+  background: #17b8ed;
   font-size: 1rem;
   color: #000000;
   border: none;
