--- a/src/Styles/ProfilePage.css
+++ b/src/Styles/ProfilePage.css
@@ -19,8 +19,14 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-bottom: 15px;
-  border: 2px solid #00d4ff;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  border: 4px solid #00d4ff;
+}
+.profile-picture img:hover {
+  box-shadow:0 5px 15px rgba(0, 255, 255, 0.6);
+  transition: 1.2s;  
+  transform: scale(1.1);
 }
 
 .profile-username {
