--- a/src/Styles/planets.css
+++ b/src/Styles/planets.css
@@ -9,8 +9,7 @@
   font-weight: 400;
   color: #ffffff;
   background-image: 
-    radial-gradient(circle at center, rgba(0, 255, 255, 0.2), rgba(0, 0, 0, 0.8)),
-    url('/public/images/planets-bgrd.jpg');
+    radial-gradient(circle at center, rgba(0, 255, 255, 0.2), rgba(0, 0, 0, 0.8));
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -24,10 +23,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, rgba(0, 255, 255, 0.1), rgba(0, 255, 255, 0.3));
-  pointer-events: none;
+  background: linear-gradient(rgba(0, 255, 255, 0.1), rgba(0, 255, 255, 0.3));
   mix-blend-mode: overlay;
-  animation: gradientShift 10s ease-in-out infinite;
   z-index: 0;
 }
 
@@ -77,24 +74,10 @@
   width: 200%;
   height: 200%;
   background: radial-gradient(circle, transparent, rgba(0, 255, 255, 0.2));
-  animation: pulse 4s infinite;
   z-index: 0;
 }
 
-@keyframes pulse {
-  0% {
-    transform: scale(0.8);
-    opacity: 0.7;
-  }
-  50% {
-    transform: scale(1);
-    opacity: 0.3;
-  }
-  100% {
-    transform: scale(0.8);
-    opacity: 0.7;
-  }
-}
+
 
 .planet-card:hover {
   transform: scale(1.05) translateY(-5px);
@@ -145,11 +128,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  
   transform: translate(-50%, -50%) scale(0.5);
-  opacity: 0;
   background: rgba(20, 30, 50, 0.95);
-  backdrop-filter: blur(8px);
   color: #f0f0f0;
   padding: 40px;
   border-radius: 15px;
@@ -183,7 +163,7 @@
 
 .close-button:hover {
   color: red;
-  transform: scale(1.1) rotate(15deg);
+  transform: scale(1.1) rotate(5deg);
 }
 
 button {
