--- a/src/styles/LoginRegisterForm.css
+++ b/src/styles/LoginRegisterForm.css
@@ -19,14 +19,20 @@
   }
   
   .auth-form label {
-    display: block;
+    display: flex;
+    align-items: center;
+    gap: 10px;
     margin-bottom: 8px;
     font-size: 1rem;
     color: #bbd4ff; /* Лек синьо-бял оттенък */
   }
-  
+  .auth-form .special-label{
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    color: greenyellow;
+  }
   .auth-form input {
-    width: 100%;
+    width: 94%;
     padding: 12px;
     margin-bottom: 15px;
     border: 2px solid #00d4ff; /* Неонов кант */
@@ -44,8 +50,11 @@
   }
   
   .auth-form button {
-    width: 100%;
+    position: relative;
+    width: 60%;
     padding: 12px;
+    margin-bottom: 10px;
+    left: 15%;
     background: linear-gradient(135deg, #00d4ff, #00ffab); /* Неонова градиента */
     color: white;
     border: none;
